fix(theme): gradient text at dark mode (close: #33)

--- a/packages/vuepress-theme-vt/styles/home.styl
+++ b/packages/vuepress-theme-vt/styles/home.styl
@@ -3,7 +3,9 @@
         margin: 0;
         line-height: 1.25;
     }
+}
 
+html:not(.dark) {
     .heroText .gradient {
         font-weight: bolder;
         color: var(--c-brand);
